# pytest-gitlab-fold

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  tests.yml
pytest_gitlab_fold/: __init__.py
pytest_travis_fold/: __init__.py
tests/: test_fixture.py  test_gitlab_fold.py  test_travis_fold.py
